character add and character spped control

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <canvas id="the-canvas"></canvas>
     </div>
     <script src="light.js"></script>
+    <script src="character.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
